# LabEMO-CppROOT

./: .clang-format  .gitignore  CMakeLists.txt  CheckList.txt  Ok.txt  Particle.cpp  Particle.hpp  ParticleType.cpp  ParticleType.hpp  README.md  ResonanceType.cpp  ResonanceType.hpp  TestFile.C  histo_analyzer.C  histo_diff.C  histograms.root  main.C  main_test1.cpp  man_test1.cpp  random_generation.C  test1  test2  test_file.cpp
commands/: analyzer_run_template.C.in  configure_root_template.C.in  program_run_template.C.in  test_graph_result_template.C.in  test_histogram_template.C.in
generated_files/: histograms.root
myRoot/: ParticleType_cpp.d  ParticleType_cpp_ACLiC_dict_rdict.pcm  Particle_cpp.d  Particle_cpp_ACLiC_dict_rdict.pcm  ResonanceType_cpp.d  ResonanceType_cpp_ACLiC_dict_rdict.pcm  random_generation.C
src/: Particle.cpp  Particle.hpp  ParticleType.cpp  ParticleType.hpp  ParticleType_cpp.d  ParticleType_cpp_ACLiC_dict_rdict.pcm  Particle_cpp.d  Particle_cpp_ACLiC_dict_rdict.pcm  ResonanceType.cpp  ResonanceType.hpp  ResonanceType_cpp.d  ResonanceType_cpp_ACLiC_dict_rdict.pcm  TestFile.C  histograms.root  random_generation.C  random_generation_C.d  random_generation_C_ACLiC_dict_rdict.pcm  test.cpp
tests/: HistoTest.C  HistoTest.cpp  TestFile.C  histograms.root  main_test1.cpp  test_file.cpp
